# rust-ssh-cert-auth

./: .gitignore  Cargo.toml  README.md  ca_key  ca_key.pem.pub
PAM-SS/: Cargo.toml
PAM-SS/src/: client.rs  db.rs  main.rs  signer.rs
PAM/client/src/: main.rs
PAM/signer/src/: main.rs
PAN-SS/: Cargo.toml
PAN-SS/src/: client.rs  main.rs
client/: Cargo.toml
client/certificado-client/: certificado_henrique.pem
client/chave-pv-cliente/: id_ed25519  id_ed25519.pub
client/src/: main.rs
relatorio/pdf/: trabalho-ssRA2.odt
signer/: Cargo.toml
signer/src/: db.rs  main.rs
vault/: Cargo.toml  app.py  ca_key  ca_key.pub  main.py  requirements.txt
vault/src/: ca_key.pub  main.rs
