[package]
name = "signer"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.29"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
totp-lite = "2.0.1"
koibumi-base32 = "0.0.3"
rand = "0.8"

